# composite

./: CMakeLists.txt  README.md  app.cpp  app.h  build.sh  composition.cpp  composition.h  main.cpp  reader.cpp  reader.h
